# Ebi

./: .gitignore  .gitlab-ci.yml  0.xes  Cargo.toml  CoSeLoG WABO 2.xes.gz-flw.bpmn  LICENSE  README.md  Sepsis.xes.gz-dfg.bpmn  autogenPyO3.rs  compile npm.sh  dfg.dfg  discovered.slpn  index.html  latex.tex  pyproject.toml  test.sh  tree.txt
.cargo/: config.toml
.github/workflows/: build-windows.yml  build_linux.yml  commit.yml  python.yml  rust.yml  test.yml
documentation/: compile documentation.sh  documentation.css  stijlen.css
lib/derive_activity_key/: Cargo.toml
lib/ebi_derive/: Cargo.toml
manual/: bibliography.bib  compile-manual.sh  functions.tex  manual.tex
src/: activity_key.rs  align.rs  alignment_miner.rs  alignments.rs  analysis.rs  association.rs  completeness.rs  cross_product.rs  deterministic_semantics_for_stochastic_semantics.rs  distances.rs  dottable.rs  ebi_input_output.rs  entropic_relevance.rs  export.rs  file_handler.rs  follower_semantics.rs  follower_semantics_trace.rs  import.rs  import_reader.rs  jenson_shannon_stochastic_conformance.rs  json.rs  labelled_petri_net_semantics.rs  levenshtein.rs  lib.rs  line_reader.rs  main.rs  marking.rs  medoid.rs  medoid_non_stochastic.rs  multiple_reader.rs  net.rs  occurrences_miner.rs  pyproject.toml  sample.rs  stochastic_labelled_petri_net_semantics.rs  test  test.rs  tests.rs  text.rs  trace_probability.rs  (+3 more)
src/conversions/: to_compressed_event_log.rs  to_deterministic_finite_automaton.rs  to_directly_follows_model.rs  to_event_log.rs  to_finite_language.rs  to_finite_stochastic_language.rs  to_labelled_petri_net.rs  to_language_of_alignments.rs  to_lola_net.rs  to_petri_net_markup_language.rs  to_process_tree.rs  to_stochastic_deterministic_finite_automaton.rs  to_stochastic_directly_follows_model.rs  to_stochastic_labelled_petri_net.rs
src/ebi_alignments/: cross_product_arc.rs  cross_product_net.rs  cross_product_place.rs  cross_product_search_state.rs  cross_product_transition.rs  linear_programming_solver.rs  stochastic_astar.rs  trace_net.rs
src/ebi_commands/: ebi_command.rs  ebi_command_alignment.rs  ebi_command_analyse.rs  ebi_command_analyse_non_stochastic.rs  ebi_command_association.rs  ebi_command_conformance.rs  ebi_command_conformance_non_stochastic.rs  ebi_command_convert.rs  ebi_command_discover.rs  ebi_command_discover_non_stochastic.rs  ebi_command_filter.rs  ebi_command_info.rs  ebi_command_itself.rs  ebi_command_latex.rs  ebi_command_probability.rs  ebi_command_reduce.rs  ebi_command_sample.rs  ebi_command_test.rs  ebi_command_validate.rs  ebi_command_visualise.rs
src/ebi_file_handlers/: business_process_model_and_notation.rs  compressed_event_log.rs  deterministic_finite_automaton.rs  directly_follows_graph.rs  directly_follows_model.rs  event_log.rs  event_log_csv.rs  event_log_ocel.rs  event_log_python.rs  event_log_xes.rs  executions.rs  finite_language.rs  finite_stochastic_language.rs  finite_stochastic_partially_ordered_language.rs  labelled_petri_net.rs  language_of_alignments.rs  lola_net.rs  partially_ordered_workflow_language.rs  petri_net_markup_language.rs  portable_document_format.rs  portable_network_graphics.rs  process_tree.rs  process_tree_markup_language.rs  scalable_vector_graphics.rs  stochastic_business_process_model_and_notation.rs  stochastic_deterministic_finite_automaton.rs  stochastic_directly_follows_model.rs  stochastic_labelled_petri_net.rs  stochastic_language_of_alignments.rs  stochastic_nondeterministic_finite_automaton.rs  stochastic_process_tree.rs
src/ebi_framework/: activity_key.rs  displayable.rs  documentation.rs  dottable.rs  ebi_command.rs  ebi_file_handler.rs  ebi_importer_parameters.rs  ebi_input.rs  ebi_object.rs  ebi_output.rs  ebi_trait.rs  ebi_trait_object.rs  exportable.rs  importable.rs  infoable.rs  manual.rs  object_importers.rs  pm4py_link.rs  pm4py_module.rs  pm4py_module_autogen.rs  prom_link.rs  trait_importers.rs  validate.rs
src/ebi_objects/: alignments.rs  business_process_model_and_notation.rs  compressed_event_log.rs  deterministic_finite_automaton.rs  deterministic_finite_automaton_semantics.rs  directly_follows_graph.rs  directly_follows_graph_semantics.rs  directly_follows_model.rs  directly_follows_model_semantics.rs  ebi_object.rs  event_log.rs  executions.rs  finite_language.rs  finite_language_semantics.rs  finite_stochastic_language.rs  finite_stochastic_language_semantics.rs  labelled_petri_net.rs  labelled_petri_net_semantics.rs  language_of_alignments.rs  lola_net.rs  petri_net_markup_language.rs  portable_document_format.rs  process_tree.rs  process_tree_markup_language.rs  process_tree_semantics.rs  scalable_vector_graphics.rs  stochastic_business_process_model_and_notation.rs  stochastic_deterministic_finite_automaton.rs  stochastic_deterministic_finite_automaton_semantics.rs  stochastic_directly_follows_graph_semantics.rs  stochastic_directly_follows_model.rs  stochastic_labelled_petri_net.rs  stochastic_labelled_petri_net_semantics.rs  stochastic_language_of_alignments.rs  stochastic_process_tree.rs  stochastic_process_tree_semantics.rs
src/ebi_traits/: ebi_semantics.rs  ebi_trait.rs  ebi_trait_activities.rs  ebi_trait_alignments.rs  ebi_trait_event_log.rs  (+13 more)
testfiles/: BPI13_open.slpn  BPI_Challenge_2013_closed_problems.xes.gz-dfg.dfg  a-a-livelock.lpn  a-b-c-livelock.sdfa  a-b-c-livelock.slang  a-b-c-livelock.slpn  a-b-c-livelock_f64.slpn  a-b-c-livelock_invalid.sdfa  a-b-double.xes  a-b-flower.ptree  a-b-livelock.sdfa  a-b-tau-livelock.slpn  a-b.bpmn  a-b.csv  a-b.exs  a-b.sdfa  a-b.slang  a-b.xes  a-b_multiple_separators.csv  a-b_star.dfm  a-b_star_empty.dfm  a-b_star_invalid (10).dfm  a-b_star_invalid (2).dfm  a-b_star_invalid (3).dfm  a-b_star_invalid (5).dfm  a-b_star_invalid (6).dfm  a-b_star_invalid (7).dfm  a-b_star_invalid (8).dfm  a-b_star_invalid (9).dfm  a-b_star_invalid.dfm  a-blivelock.sdfa  a-livelock-zeroweight.sdfa  a-livelock-zeroweight.slpn  a-livelock.sdfa  a-loop-c-unbounded.slpn  a-loop.dfa  a-loop.lpn  a-loop.sdfa  a.pnml  a.powl  (+130 more)
tests/: earth_movers_test.rs
(+193 files in other folders)
