[package]
name = "ebi"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["stochastic-processes", "process-mining", "business-processes"]
categories = ["command-line-utilities"]
description = "A stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi"
readme = "README.md"
exclude = ["/testfiles", "/manual", ".github/", ".*"]

[lib]
name = "ebi"
crate-type = ["cdylib", "lib"]

[features]
default = [ ]
eexactarithmetic = []
python = [ "dep:pyo3", "dep:polars", "dep:num-traits", "dep:syn" ]
exactarithmetic = [ "eexactarithmetic", "ebi_arithmetic/exactarithmetic" ]
approximatearithmetic = [ "eapproximatearithmetic", "ebi_arithmetic/approximatearithmetic" ]
eapproximatearithmetic = []

[dependencies]
ebi_derive = "0.2.2"
ebi_arithmetic = "0.3.0"
ebi_optimisation = "0.3.0"
ebi_objects = "0.3.0"
bitvec = "1.0.1"
clap = { version = "4.5.48", features = ["derive", "cargo", "string"] }
anyhow = "1.0.100"
clap-verbosity-flag = "3.0.3"
log = { version = "0.4.28", features = ["release_max_level_debug"] }
env_logger = "0.11.8"
layout-rs = "0.1.3"
fraction = { version = "0.15.3", features = ["with-approx"] }
serde_json = "1.0.145"
priority-queue = "2.6.0"
process_mining = { version = "0.3.25", features = ["graphviz-export"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
chrono = "0.4.41"
flate2 = "1.1.2"
rayon = "1.10.0"
strsim = "0.11.1"
Inflector = "0.11.4"
strum = "0.27.1"
strum_macros = "0.27.2"
indicatif = "0.18.0"
indexmap = "2.11.4"
pathfinding="4.14.0"
fnv = "1.0.7"
jni = "0.21.1"
itertools = "0.14.0"
serde = "1.0.226"
logging_timer = "1.1.1"
svg2pdf = "0.13.0"
uuid = "1.18.1"
cfg-if = "1.0.1"
ntest = "0.9.3"
regex = "1.11.3"
quick-xml = {version="0.38.3", features=["serialize"]}
malachite = "0.7.0"
pastey = "0.1.1"
pyo3 = { version = "0.18", features = ["extension-module", "abi3-py37", "generate-import-lib"], optional = true }
polars = { version = "0.32", features = ["ipc", "timezones"], optional = true }
num-traits = { version = "0.2", optional = true }
syn = { version = "2.0.106", features = [ "parsing", "full" ], optional = true }

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 2
lto = true
codegen-units = 8
