[package]
name = "ebi_derive"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = [""]
categories = ["command-line-utilities"]
description = "A stochastic process mining utility - derive macros"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi"
readme = "README.md"

[dependencies]
syn = "*"
quote = "*"
darling = "*"

[lib]
proc-macro = true